--- a/tools/config.ini
+++ b/tools/config.ini
@@ -22,7 +22,7 @@ E:\My_Workspace\quakedev
 *output
 E:\My_Workspace\quakedev\id1\maps
 *lastMap
-E:\My_Workspace\quakedev\working\arena2.map
+C:\gitrepo\quakedev\working\arena2.map
 
 *convert
 False
@@ -44,7 +44,7 @@ True
 True
 
 *engine
-E:\My_Workspace\quakedev\ironwail.exe
+C:\gitrepo\quakedev\ironwail.exe
 
 
 *blockStart_bsp
