--- a/tools/config.ini
+++ b/tools/config.ini
@@ -22,7 +22,7 @@ E:\My_Workspace\quakedev
 *output
 E:\My_Workspace\quakedev\id1\maps
 *lastMap
-C:\gitrepo\quakedev\working\arena2.map
+E:\My_Workspace\quakedev\working\arena2.map
 
 *convert
 False
@@ -44,7 +44,7 @@ True
 True
 
 *engine
-C:\gitrepo\quakedev\ironwail.exe
+E:\My_Workspace\quakedev\ironwail.exe
 
 
 *blockStart_bsp
