--- a/tools/config.ini
+++ b/tools/config.ini
@@ -22,7 +22,7 @@ E:\My_Workspace\quakedev
 *output
 E:\My_Workspace\quakedev\id1\maps
 *lastMap
-E:\My_Workspace\quakedev\working\shad_dm2.map
+E:\My_Workspace\quakedev\working\singleplayer_map1.map
 
 *convert
 False
