--- a/tools/config.ini
+++ b/tools/config.ini
@@ -18,11 +18,11 @@ False
 *tools
 E:\My_Workspace\quakedev\tools\ericw-tools-v0.18.1-32-g6660c5f-win64\bin
 *work
-E:\My_Workspace\quakedev
+E:\My_Workspace\quakedev\working
 *output
 E:\My_Workspace\quakedev\id1\maps
 *lastMap
-E:\My_Workspace\quakedev\working\singleplayer_map1.map
+E:\My_Workspace\quakedev\working\cube_dm.map
 
 *convert
 False
