Figuring out triggers part 2

--- a/id1/ironwail.cfg
+++ b/id1/ironwail.cfg
@@ -69,6 +69,9 @@ cl_bob "0.02"
 cl_confirmquit "0"
 cl_forwardspeed "400"
 cl_gun_fovscale "1"
+cl_gun_x "0"
+cl_gun_y "0"
+cl_gun_z "0"
 cl_maxpitch "90"
 cl_minpitch "-90"
 cl_mwheelpitch "5"
@@ -76,6 +79,7 @@ cl_rollangle "2.0"
 cl_screenshotname "screenshots/%map%_%date%_%time%"
 cl_startdemos "1"
 cl_titlestats "1"
+con_maxcols "0"
 con_notifycenter "0"
 con_notifyfade "0"
 con_notifyfadetime "0.5"
@@ -88,6 +92,11 @@ fov_adapt "1"
 freelook "1"
 gamma "1"
 gl_compress_textures "0"
+gl_cshiftpercent "100"
+gl_cshiftpercent_bonus "100"
+gl_cshiftpercent_contents "100"
+gl_cshiftpercent_damage "100"
+gl_cshiftpercent_powerup "100"
 gl_farclip "16384"
 gl_fullbrights "1"
 gl_lodbias "auto"
@@ -96,17 +105,33 @@ gl_texture_anisotropy "8"
 gl_texturemode "GL_NEAREST_MIPMAP_LINEAR"
 gl_triplebuffer "1"
 gl_zfix "1"
+gyro_calibration_x "0"
+gyro_calibration_y "0"
+gyro_calibration_z "0"
+gyro_enable "1"
+gyro_mode "2"
+gyro_noise_thresh "1.5"
+gyro_pitchsensitivity "2.5"
+gyro_turning_axis "0"
+gyro_yawsensitivity "2.5"
 host_maxfps "0"
 hudstyle "2"
+joy_always_active "0"
 joy_deadzone_look "0.175"
 joy_deadzone_move "0.175"
 joy_deadzone_trigger "0.2"
-joy_enable "1"
+joy_device "0"
 joy_exponent "3"
 joy_exponent_move "3"
+joy_flick "0"
+joy_flick_deadzone "0.9"
+joy_flick_noise_thresh "2.0"
+joy_flick_recenter "0.0"
+joy_flick_time "0.125"
 joy_invert "0"
 joy_outer_threshold_look "0.02"
 joy_outer_threshold_move "0.02"
+joy_rumble "0.3"
 joy_sensitivity_pitch "150"
 joy_sensitivity_yaw "300"
 joy_swapmovelook "0"
@@ -119,17 +144,24 @@ m_side "0.8"
 m_yaw "0.022"
 r_alphasort "1"
 r_clearcolor "2"
+r_dither "1.0"
 r_dynamic "1"
 r_lerplightstyles "1"
 r_lerpmodels "1"
 r_lerpmove "1"
+r_md5 "1"
 r_novis "0"
 r_oit "1"
 r_particles "1"
 r_scale "0"
+r_showfields_align "1"
 r_simd "1"
 r_skywind "1"
 r_softemu "0"
+r_softemu_dither_screen "1.0"
+r_softemu_dither_texture "1.0"
+r_softemu_lightmap_banding "-1"
+r_softemu_mdl_warp "-1"
 r_softemu_metric "-1"
 r_viewmodel_quake "0"
 r_wateralpha "1"
@@ -139,6 +171,7 @@ saved2 "0"
 saved3 "0"
 saved4 "0"
 savedgamecfg "0"
+scr_centerprintbg "0"
 scr_clock "0"
 scr_conalpha "0.5"
 scr_conbrightness "1.0"
@@ -146,19 +179,25 @@ scr_conscale "1.6"
 scr_conspeed "500"
 scr_conwidth "0"
 scr_crosshairscale "1"
+scr_demobar_timeout "1"
 scr_menubgalpha "0.7"
+scr_menubgstyle "-1"
 scr_menuscale "1.6"
 scr_pixelaspect "1"
 scr_sbaralpha "0.75"
 scr_sbarscale "1.6"
 scr_showfps "0"
+scr_showspeed "0"
 sensitivity "3"
+snd_filterquality "5"
 snd_waterfx "1"
 sv_altnoclip "1"
 sv_autoload "2"
 sv_autosave "1"
 sv_autosave_interval "30"
+sv_gameplayfix_elevators "2"
 sv_gameplayfix_random "1"
+ui_live_preview "1"
 ui_mouse "1"
 ui_mouse_sound "0"
 ui_search_timeout "1"
@@ -169,11 +208,11 @@ vid_desktopfullscreen "0"
 vid_fsaa "16"
 vid_fsaamode "0"
 vid_fullscreen "0"
-vid_height "600"
+vid_height "1009"
 vid_refreshrate "165"
 vid_saveresize "0"
 vid_vsync "0"
-vid_width "800"
+vid_width "1920"
 viewsize "100"
 volume "0.7"
 zoom_fov "30"
