--- a/tools/config.ini
+++ b/tools/config.ini
@@ -22,7 +22,7 @@ E:\My_Workspace\quakedev\working
 *output
 E:\My_Workspace\quakedev\id1\maps
 *lastMap
-E:\My_Workspace\quakedev\working\cube_dm.map
+E:\My_Workspace\quakedev\working\cube_dm_freestyle.map
 
 *convert
 False
